--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@angular/router": "^6.1.0",
     "alertify.js": "^1.0.12",
     "core-js": "^2.5.4",
-    "ngx-bootstrap": "^5.1.1",
+    "ng-bootstrap": "^1.6.3",
     "rxjs": "~6.2.0",
     "zone.js": "~0.8.26"
   },
